--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
             </header>
 
             <main class="flex-grow grid ${gridCols} gap-4 overflow-hidden">
-                <div id="library-container" class="transition-all duration-300 ${libraryColSpan}">
+                <div id="library-container" class="transition-all duration-300 ${libraryColSpan} min-h-0">
                     ${renderLibraryPanel()}
                 </div>
 
-                <div id="main-container" class="transition-all duration-300 ${mainColSpan} flex flex-col space-y-4 overflow-auto custom-scrollbar">
+                <div id="main-container" class="transition-all duration-300 ${mainColSpan} flex flex-col space-y-4 overflow-auto custom-scrollbar min-h-0">
                     ${!tracker ? renderBuilderPanel() : ''}
                     ${tracker ? renderTrackerPanel() : ''}
                 </div>
                 
-                <div id="initiative-container" class="transition-all duration-300 ${initiativeColSpan}">
+                <div id="initiative-container" class="transition-all duration-300 ${initiativeColSpan} min-h-0">
                     ${tracker ? renderInitiativePanel() : ''}
                 </div>
             </main>
@@ -550,7 +550,6 @@
         } else if (target.dataset.action === 'toggle-action') {
             handleToggleAction(target.dataset.unitId, target.dataset.actionName, target.checked);
             saveState();
-            render();
         }
     }
     
@@ -742,3 +741,4 @@
     </script>
 </body>
 </html>
+
